--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +15,35 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.textAreasContainer {
+  display: flex; /* This enables Flexbox for the container */
+  justify-content: space-around; /* This spreads the items evenly with space around them */
+  align-items: stretch; /* This makes all items stretch to fill the container */
+}
+
+.loading-container {
+  width: 80%;
+  max-width: 600px;
+  height: 30px;
+  background-color: #ddd;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+.loading-bar {
+  height: 100%;
+  width: 0%;
+  background-color: #4CAF50;
+  border-radius: 15px 0 0 15px;
+  transition: width 0.2s ease;
+}
+
+
+.centerBar{
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
